v2.4 (#36)
* Merge hotfixes (#7)

* Better player messages

* Duplicated code

* Document commands

* Warn about the web login limitation

* Update README.md

* Update README.md

* Add Key-based auth config keys

* Removed unused library

* Fix log

* Change log method

* Update credits

* Update README.md

* Fix JAR naming

* Typo

* New logo

* Show chat only to players with broadcast permission

* Show chat only to players with broadcast permission

* Fix JAR naming

* Update ChatPointsTTV.java

* Set version to v2.1

* Download dependencies at runtime rather than shading

Jar filesize reduced considerably

* Let client setup finish before unlinking

* Add option to toggle in-game alerts

* Set default values

* Set default values

* TNT Events + Optional args on config

* v2.2

* Restart Twitch session when plugin reloads

* Add {USER} field

* Documentation

* Add target user argument to SPAWN command

Made error handling more user-friendly

* Improved error handling

* Do not return after invalid command

* Add target user argument to GIVE command

* Option to disable events from offline streamers (#16)

* Fix java.net.url constructor deprecation

* "Amount" field (#22)

* Raid Events

* Better error prompting

* Update Twitch4J to v1.23.0

* Remove unconvenient try-catch

* Move getUserId and getUsername to TwitchUtils

* #20 fix

dumbest mistake ever

* Move RaidEvents away from PubSub

* Fix {USER} replacement

* Fix and tidy up reward sorting

* Fix mistake

* Remove debugging logs, imports and tidy up

* Add /link "method" argument  to /help

* Added /test command

* Should be fixed

* Remove unnecessary call and scape session recovery feature

* Switch to EventSub for Channel Point Rewards (not fully working atm)

* Custom Client ID would be used although browser parameter had been specified

* Catch NumberFormatError if user doesn't input a number

* Revert "Switch to EventSub for Channel Point Rewards (not fully workin