@@ -4,7 +4,8 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.logging.Logger;
 import org.bukkit.entity.Player;
 import org.json.JSONArray;
@@ -27,7 +28,7 @@ public class VersionCheck {
 
         try {
             StringBuilder result = new StringBuilder();
-            HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
+            HttpURLConnection conn = (HttpURLConnection) new URI(url).toURL().openConnection();
             conn.setRequestMethod("GET");
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()))) {
                 for (String line; (line = reader.readLine()) != null; ) {
@@ -57,7 +58,7 @@ public class VersionCheck {
 
             }
 
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             log.warning("Couldn't fetch latest version." + e.toString());
         }
     }
